--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
   <head>
     <meta charset="utf-8">
     <title>Assignment_01</title>
@@ -7,19 +7,23 @@
   </head>
   <body>
     <h1>Assignment_01 - Welcome</h1>
-
+    <section>
     <h2>What is your name?</h2>
     <p>
       <!-- TODO(you): Enter your answer here -->
+      Alexander Weilert
     </p>
 
     <h2>What is a fun fact about yourself?</h2>
     <p>
       <!-- TODO(you): Enter your answer here -->
+      All male family members on the father's side are also called Alexander
     </p>
 
     <h2>What do you look like?</h2>
     <!-- TODO(you): Add a picture of yourself or of something that represents yourself. -->
-
+    <p>A photo of me taken a few years ago.</p>
+    <img src="Picture.jpg" alt="Picture of myself">
+    </section>
   </body>
 </html>
